--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
+    "styled-components": "^4.1.3",
     "tachyons": "^4.11.1"
   }
 }
