--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "gatsby-transformer-sharp": "^2.1.10",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
+    "recompose": "^0.30.0",
     "styled-components": "^4.1.3",
     "tachyons": "^4.11.1"
   }
