--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-images": "^3.0.1",
+    "gatsby-source-contentful": "^2.0.30",
     "gatsby-source-filesystem": "^2.0.13",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.10",
