--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "body-scroll-lock": "^2.6.1",
     "gatsby": "^2.0.90",
     "gatsby-image": "^2.0.25",
     "gatsby-plugin-feed": "^2.0.11",
