--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "body-scroll-lock": "^2.6.1",
     "gatsby": "^2.0.90",
     "gatsby-image": "^2.0.25",
@@ -25,6 +26,7 @@
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.10",
     "react": "^16.7.0",
+    "react-animated-css": "^1.0.4",
     "react-dom": "^16.7.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
