--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-source-contentful": "^2.0.30",
-    "gatsby-source-filesystem": "^2.0.13",
+    "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-source-graphql": "^2.0.10",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.10",
     "react": "^16.7.0",
